--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app"
   },
-  "author": "privat kouadio",
+  "author": "Privat's labs",
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.3.2",
