--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "firebase-admin": "^11.11.1",
     "node-telegram-bot-api": "^0.64.0",
+    "path": "^0.12.7",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
